--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <script>
         	;$( function()
         	{
-        		var tds;
+        		var tds$;
 
         		/*
         		 * Load a table with random numbers between 1 and 10,000
@@ -94,7 +94,7 @@
 
         		var tdsMouseupCallback = function ()
         		{
-        			var s = tds.getSelectedCount();
+        			var s = tds$.getSelectedCount();
         			$( "#numSelected" ).html( s );
         		}
 
@@ -105,12 +105,12 @@
         			mouseupCallback: tdsMouseupCallback
         		};
 
-        		tds = new tableDragSelect( $( "#table1" ), tds_options );
+        		tds$ = new tableDragSelect( $( "#table1" ), tds_options );
 
         		$( "#selectAll" ).click( 
         			function()
         			{ 
-        				tds.selectAll();
+        				tds$.selectAll();
         				return false; 
         			} 
         		);
@@ -118,14 +118,14 @@
         		$( "#selectNone" ).click( 
         			function()
         			{ 
-        				tds.selectNone(); 
+        				tds$.selectNone(); 
         				return false; 
         			} 
         		);
         		
         		$( "#showSelected" ).click( function()
         			{ 
-        				var si = tds.getSelectedItems(), i, items = [ ];
+        				var si = tds$.getSelectedItems(), i, items = [ ];
         				
         				if( si.length === 0)
         				{
